// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Do payment with Excel FSP Export FSP instructions Should return all project-registration-attributes on Get FSP instruction with Excel-FSP when "columnsToExport" is not set 1`] = `
[
  {
    "data": [
      {
        "accountId": null,
        "amount": 10,
        "date": null,
        "dob": "31-08-1990",
        "dragon": "0",
        "fixedChoice": null,
        "fullName": "Jaime Lannister",
        "healthArea": "",
        "house": "lannister",
        "knowsNothing": "false",
        "motto": "A lanister always pays his debts",
        "openAnswer": "",
        "personalId": "",
        "phoneNumber": "14155235556",
        "referenceId": "westeros987654322",
        "whatsappPhoneNumber": "14155235555",
      },
    ],
    "fileNamePrefix": "gringotts",
  },
  {
    "data": [
      {
        "accountId": null,
        "amount": 20,
        "date": null,
        "dob": "31-08-1990",
        "dragon": "1",
        "fixedChoice": null,
        "fullName": "John Snow",
        "healthArea": "",
        "house": "stark",
        "knowsNothing": "true",
        "motto": "Winter is coming",
        "openAnswer": "",
        "personalId": "",
        "phoneNumber": "14155235554",
        "referenceId": "westeros123456789",
        "whatsappPhoneNumber": "14155235554",
      },
      {
        "accountId": null,
        "amount": 10,
        "date": null,
        "dob": "31-08-1990",
        "dragon": "0",
        "fixedChoice": null,
        "fullName": "Arya Stark",
        "healthArea": "",
        "house": "stark",
        "knowsNothing": "false",
        "motto": "A girl has no name",
        "openAnswer": "",
        "personalId": "",
        "phoneNumber": "14155235555",
        "referenceId": "westeros987654321",
        "whatsappPhoneNumber": "14155235555",
      },
    ],
    "fileNamePrefix": "ironBank",
  },
]
`;

exports[`Do payment with Excel FSP Export FSP instructions Should return specified columns on Get FSP instruction with Excel-FSP when "columnsToExport" is set 1`] = `
[
  {
    "data": [
      {
        "amount": 10,
        "dob": "31-08-1990",
        "dragon": "0",
        "name": "Jaime Lannister",
        "phoneNumber": "14155235556",
        "referenceId": "westeros987654322",
      },
    ],
    "fileNamePrefix": "gringotts",
  },
  {
    "data": [
      {
        "amount": 20,
        "dob": "31-08-1990",
        "dragon": "1",
        "fullName": "John Snow",
        "phoneNumber": "14155235554",
        "referenceId": "westeros123456789",
      },
      {
        "amount": 10,
        "dob": "31-08-1990",
        "dragon": "0",
        "fullName": "Arya Stark",
        "phoneNumber": "14155235555",
        "referenceId": "westeros987654321",
      },
    ],
    "fileNamePrefix": "ironBank",
  },
]
`;

exports[`Do payment with Excel FSP Import FSP reconciliation data Should give an error when status column is missing 1`] = `
{
  "errors": "The 'status' column is either missing or contains unexpected values. It should only contain 'success' or 'error'.",
}
`;

exports[`Do payment with Excel FSP Import FSP reconciliation data Should give an error when there are duplicate values in the toMatch column 1`] = `
{
  "errors": "The match column 'phoneNumber' contains duplicate values.",
}
`;

exports[`Do payment with Excel FSP Import FSP reconciliation data should give me a CSV template when I request it 1`] = `
[
  {
    "name": "gringotts",
    "template": [
      "phoneNumber",
      "status",
    ],
  },
  {
    "name": "ironBank",
    "template": [
      "phoneNumber",
      "status",
    ],
  },
]
`;
